--- a/app/src/main/res/layout/weight_fragment.xml
+++ b/app/src/main/res/layout/weight_fragment.xml
@@ -6,7 +6,7 @@
 
     <include layout="@layout/top_buttons"/>
 
-    <com.github.defio.horizontalpicker.HorizontalDayPicker
+    <com.github.defio.horizontalpicker.HorizontalMonthPicker
         android:id="@+id/datePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
