--- a/app/src/main/res/layout/weight_fragment.xml
+++ b/app/src/main/res/layout/weight_fragment.xml
@@ -1,4 +1,5 @@
 <LinearLayout
+    android:animateLayoutChanges="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,12 +12,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="@dimen/half_margin"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
+
+        <RelativeLayout
+            android:animateLayoutChanges="true"
+            android:id="@+id/no_measurement_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/no_weight_image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/weight"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/no_weight_image"
+                android:layout_centerHorizontal="true"
+                android:paddingTop="10dp"
+
+                android:text="@string/weight.no.measurement"/>
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/half_margin"/>
+    </RelativeLayout>
+
+
+    <Button
+        android:id="@+id/insert_new_measurement_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/new.weight.measurement"/>
 
 
 </LinearLayout>
