--- a/app/src/main/res/layout/food_card.xml
+++ b/app/src/main/res/layout/food_card.xml
@@ -1,64 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical">
 
     <!-- A CardView that contains a TextView -->
     <android.support.v7.widget.CardView
-            android:layout_margin="5dp"
         android:id="@+id/card_view"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="5dp"
         card_view:cardCornerRadius="4dp">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            tools:background="#00ab09"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/food_name_text_view"
-                android:layout_width="match_parent"
-                android:layout_margin="@dimen/half_margin"
-                android:layout_height="wrap_content"
-                tools:text="Pasta"/>
+            <View
+                android:layout_margin="10dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:background="#F00"/>
 
             <LinearLayout
-                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/minus_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="-"/>
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
 
                 <TextView
-                    android:id="@+id/counter_text_view"
-                    android:layout_width="0dp"
+                    android:id="@+id/food_name_text_view"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_margin="@dimen/half_margin"
                     android:gravity="center"
-                    android:text="0"/>
+                    android:textColor="#FFF"
+                    android:textSize="18sp"
+                    tools:text="Pasta"/>
 
-                <Button
-                    android:id="@+id/plus_button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="+"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/minus_button"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#63000000"
+                        android:text="-"
+                        android:textColor="#FFF"
+                        android:textSize="18sp"/>
+
+                    <TextView
+                        android:id="@+id/counter_text_view"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:text="0"
+                        android:textColor="#FFF"
+                        android:textSize="18sp"/>
+
+                    <Button
+                        android:id="@+id/plus_button"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#63000000"
+                        android:text="+"
+                        android:textColor="#FFF"
+                        android:textSize="18sp"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
