svg image resolver

--- a/app/src/main/res/layout/food_card.xml
+++ b/app/src/main/res/layout/food_card.xml
@@ -22,12 +22,13 @@
             tools:background="#00ab09"
             android:orientation="horizontal">
 
-            <View
+            <ImageView
+                android:id="@+id/food_image_view"
                 android:layout_margin="10dp"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:background="#F00"/>
+                tools:background="#F00"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
