--- a/app/src/main/res/layout/food_card.xml
+++ b/app/src/main/res/layout/food_card.xml
@@ -34,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginBottom="5dp"
                 >
 
                 <TextView
@@ -43,6 +44,7 @@
                     android:layout_margin="@dimen/half_margin"
                     android:gravity="center"
                     android:textColor="#FFF"
+                    android:layout_marginEnd="5dp"
                     android:textSize="18sp"
                     tools:text="Pasta"/>
 
@@ -56,13 +58,12 @@
 
                     <Button
                         android:id="@+id/minus_button"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_width="@dimen/increment_decrement_button_size"
+                        android:layout_height="@dimen/increment_decrement_button_size"
                         android:background="#63000000"
                         android:text="-"
                         android:textColor="#FFF"
-                        android:textSize="18sp"/>
+                        android:textSize="22sp"/>
 
                     <TextView
                         android:id="@+id/counter_text_view"
@@ -76,13 +77,13 @@
 
                     <Button
                         android:id="@+id/plus_button"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_width="@dimen/increment_decrement_button_size"
+                        android:layout_height="@dimen/increment_decrement_button_size"
                         android:background="#63000000"
                         android:text="+"
                         android:textColor="#FFF"
-                        android:textSize="18sp"/>
+                        android:layout_marginEnd="5dp"
+                        android:textSize="22sp"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
