--- a/app/src/main/res/layout/top_buttons.xml
+++ b/app/src/main/res/layout/top_buttons.xml
@@ -11,6 +11,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/aliments"
+        android:layout_marginRight="1dp"
+        android:textColor="#fff"
+        android:background="#9e9e9e"
+        android:textSize="16sp"
         android:layout_weight="1"/>
 
     <Button
@@ -18,12 +22,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/home"
+        android:textColor="#fff"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
+        android:background="#9e9e9e"
+        android:textSize="16sp"
         android:layout_weight="1"/>
 
     <Button
         android:id="@+id/weight_button"
         android:layout_width="0dp"
         android:text="@string/weight"
+        android:layout_marginLeft="1dp"
+        android:textColor="#fff"
+        android:background="#9e9e9e"
+        android:textSize="16sp"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
 
