--- a/app/src/main/res/layout/weight_fragment.xml
+++ b/app/src/main/res/layout/weight_fragment.xml
@@ -53,6 +53,10 @@
         android:id="@+id/insert_new_measurement_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:textSize="16sp"
+        android:background="@color/colorPrimary"
+        android:textColor="#fff"
         android:text="@string/new.weight.measurement"/>
 
 
